main – Adding mixin for Apache Kafka internal Value-based classes